Add translation keys and implement internationalization for variable menu actions
- Replaced hardcoded variable menu labels with translatable keys in `schemer-standalone-menu.component.ts`.
- Updated logic for variable import/export, save/load coding scheme, and role selection to support internationalization.
- Enhanced `de.json` translations file with new keys related to variable menu and interaction dialogs.
- Refactored variable-related text messages in `schemer.component.ts` to use translation service.
- Updated UI components to dynamically render translated text.

--- a/projects/ngx-coding-components/src/lib/schemer/schemer.component.html
+++ b/projects/ngx-coding-components/src/lib/schemer/schemer.component.html
@@ -125,7 +125,7 @@
         </button>
         <button mat-menu-item (click)="exportVariable()">
           <mat-icon>get_app</mat-icon>
-          Variable exportieren
+          {{ "varList.export-variable" | translate }}
         </button>
         <button
           mat-menu-item
@@ -133,7 +133,7 @@
           [disabled]="schemerService.userRole === 'RO'"
         >
           <mat-icon>input</mat-icon>
-          Variable importieren
+          {{ "varList.import-variable" | translate }}
         </button>
         <button
           mat-menu-item
