Add schemer info dialog with translations
- Implemented `showSchemerInfo` method to display informational dialog about the schemer component.
- Added new translation keys for schemer info in `de.json`.
- Updated UI with a menu item to trigger the schemer info dialog.

--- a/projects/ngx-coding-components/src/lib/schemer/schemer.component.html
+++ b/projects/ngx-coding-components/src/lib/schemer/schemer.component.html
@@ -107,6 +107,11 @@
         <mat-icon>menu</mat-icon>
       </button>
       <mat-menu #otherFunctions="matMenu">
+        <button mat-menu-item (click)="showSchemerInfo()">
+          <mat-icon>info</mat-icon>
+          {{ "varList.info" | translate }}
+        </button>
+        <mat-divider></mat-divider>
         <button
           mat-menu-item
           (click)="activateBaseNoValueVars()"
