--- a/projects/ngx-coding-components/src/lib/var-coding/var-coding.component.html
+++ b/projects/ngx-coding-components/src/lib/var-coding/var-coding.component.html
@@ -38,7 +38,7 @@
             @if (varCoding.sourceType !== 'BASE' && varCoding.sourceType !==
             'BASE_NO_VALUE') {
             <div>
-              Ableitungsmethode:
+              {{ "derive-method.label" | translate }}:
               {{ "derive-method." + varCoding.sourceType | translate }}
             </div>
             @if (varCoding.sourceParameters &&
@@ -55,7 +55,7 @@
             </div>
             } @else {
             <div>
-              Quell-Variablen:
+              {{ "derive-sources.label" | translate }}:
               {{ varCoding.deriveSources || [] | varAlias : 10 }}
             </div>
             } }
